added text option